@@ -266,7 +266,11 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 22339) Added srwhat=nearmatch to list=search to get a "go" result
 * (bug 24303) Added new &servedby parameter to all actions which adds the hostname
   that served the request to the result. It is also added unconditionally on error
-
+* (bug 24185) Titles in the Media and Special namespace are now supported for 
+  title normalization in action=query. Special pages have their name resolved
+  to the local alias.
+ 
+  
 === Languages updated in 1.17 ===
 
 MediaWiki supports over 330 languages. Many localisations are updated
